--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Go to folder
       run: cd e2e_tests
     - name: Run your tests
-      run: python -m pytest --tracing=retain-on-failure
+      run: python -m pytest
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
