--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,11 +19,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Ensure browsers are installed
-      run: python -m playwright install --with-deps
+      run: playwright install
     - name: Go to folder
       run: cd e2e_tests
     - name: Run your tests
-      run: pytest --tracing=retain-on-failure
+      run: python -m pytest
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
