--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # User-specific files
+*.idea
 *.rsuser
 *.suo
 *.user
@@ -146,6 +147,7 @@ _TeamCity*
 coverage*.json
 coverage*.xml
 coverage*.info
+
 
 # Visual Studio code coverage results
 *.coverage
